# goodbye_app

./: CMakeLists.txt  README.md  hiapp.c
